# SpiritWarrior

./: .gitignore  CMakeLists.txt  README.md  SpiritWarrior.code-workspace
client/: CMakeLists.txt  run.bat
client/src/: main.cpp
client/src/Commands/: CreateRoomCommand.cpp  CreateRoomCommand.h  JoinRoomCommand.cpp  JoinRoomCommand.h
client/src/Core/: EventBus.cpp  EventBus.h  ICommand.h  StateManager.h  UserManager.h
client/src/Network/: NetworkManager.cpp  NetworkManager.h
client/src/States/: IState.h  LoginState.cpp  LoginState.h  MainMenuState.cpp  MainMenuState.h
server/: CMakeLists.txt
src/: CMakeLists.txt
test/: CMakeLists.txt
